--- a/FontAwesomeIconPicker/fontawesomeiconpicker.css
+++ b/FontAwesomeIconPicker/fontawesomeiconpicker.css
@@ -1,5 +1,5 @@
 ﻿.font-awesome-icon-picker i.fa,
-.select2-drop i.fa {
+.select2-drop i.far, .select2-drop i.fas, .select2-drop i.fab {
     display: inline-block;
     text-align: center;
     width: 25px;
